--- a/src/style/index.css
+++ b/src/style/index.css
@@ -52,3 +52,9 @@ body::before {
 	position: relative;
 	padding-top: 72px;
 }
+
+@media screen and (max-width: 572px) {
+	#app {
+		padding-top: 128px;
+	}
+}
